2007-01-21        svu

	* sql/options/JdbcOptionPane.java: keeping the last file chooser
	directory in jEdit properties (depends on the latest CommonControls
	code)

2007-01-19        svu

	* SqlPlugin.props, sql/options/ServersOptionPane.java,
	sql/options/SqlServerDialog.java, sql/SqlServerRecord.java:
	Reorganizing SqlServerRecord a bit, fixing export, implementing import
	functionality.

2007-01-17        svu

	* sql/serverTypes/oracle.xml: use proper quoting for comments
	containing quotes
	* SqlPlugin.props, sql/options/ServersOptionPane.java,
	sql/SqlServerRecord.java: "Export" function basically works (except
	for the connection name, filtering by the file name and putting IO
	into the special thread).

2007-01-16        svu

	* SqlPlugin.props, sql/SqlServerDialog.java, sql/SqlServerRecord.java,
	sql/options/ServersOptionPane.java, sql/options/SqlServerDialog.java,
	sql/options/SqlOptionPane.java,
	sql/preprocessors/SpecialCommentRemover.java, sql/SqlOptionPane.java:
	reorganizing sources, adding Import/Export buttons, fixing the
	SqlServerDialog parenting

2007-01-15        svu

	* sql/actions/SchemaAction.java: putting some sensible info into the
	buffer when Column pseudo-file is open.

2007-01-10        svu

	* sql/SqlTextPublisher.java: Aggregating update counter.

2006-12-14        svu

	* sql/TableObjectType.java, sql/SqlSubVFS.java: The "Schema" object
	action actually works now, for tables (only column names, nothing
	more).
	* sql/actions/DataAction.java, sql/actions/SchemaAction.java,
	sql/TableObjectType.java, sql/SqlSubVFS.java: separating Data/Schema
	actions into top-level classes
	* sql/CodeObjectType.java, sql/actions/SourceCodeAction.java:
	separating SourceCode action
	* sql/ViewObjectType.java, sql/CodeObjectType.java,
	sql/serverTypes/SybaseVFS.java, sql/serverTypes/OracleVFS.java:
	ViewObjectType is separated, added Data and Columns actions
	* sql/serverTypes/SybaseVFS.java, sql/serverTypes/ProgressVFS.java,