@@ -6,6 +6,10 @@
 
   <driverClass>org.gjt.mm.mysql.Driver</driverClass>
 
+  <vfs>
+    <editMode>mysql</editMode>
+  </vfs>
+
   <connection>
     <parameter name="host" default="127.0.0.1"/>
     <parameter name="port" default="3306"/>
